feat: add balance and onRampTransaction model, seed db

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@repo/db",
   "version": "1.0.0",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.19.0"
   },
